EDGPATRON-93: Replace IOUtils.toString by readAllBytes
This clears the false positive GitHub dependabot alert
"Path Traversal and Improper Input Validation in Apache Commons IO".